<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
    <groupId>org.uengine</groupId>
    <artifactId>uengine-five</artifactId>
    <version>1.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    
    <name>uengine-five</name>
	<description>Demo project for Spring Boot</description>

    <modules>
      <module>uengine-commons</module>
      <module>uengine-resource-manager</module>
      <module>uengine-core</module>
      <module>uengine-five-api</module>
      <!-- <module>uengine-parser</module> -->
      <module>definition-service</module>
      <module>process-service</module>
        <!-- <module>proxy</module> -->
        <!-- <module>semantic-entity</module> -->
        <!-- <module>event-consumer</module> -->
        <!--<module>java-reverse</module>-->
    </modules>

  <properties>
    <java.version>21</java.version>
    <spring-cloud.version>2023.0.5</spring-cloud.version>
    <cucumber.version>6.8.1</cucumber.version>
    <!-- CVE 대응: Spring Boot 3.2.5 기본 버전 오버라이드 -->
    <tomcat.version>10.1.52</tomcat.version>
    <spring-framework.version>6.1.21</spring-framework.version>
    <!-- spring-security: BOM 6.2.10 미공개이므로 dependencyManagement에서 개별 오버라이드 -->
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-jdbc</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-rest</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-hateoas</artifactId>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <scope>runtime</scope>
    </dependency>
    <!-- Oracle (oracle 프로필 사용 시) -->
    <dependency>
      <groupId>com.oracle.database.jdbc</groupId>
      <artifactId>ojdbc11</artifactId>
      <version>21.9.0.0</version>
      <scope>runtime</scope>
    </dependency>
    <!-- PostgreSQL (postgres 프로필 사용 시) — 버전은 Spring Boot BOM -->
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <scope>runtime</scope>
    </dependency>
      <!-- lombok -->

    <dependency>
      <groupId>org.springframework.cloud</groupId>
      <artifactId>spring-cloud-starter-openfeign</artifactId>
    </dependency>
    <!-- Micrometer Tracing (Sleuth 대체, Spring Boot 3) -->
    <dependency>
      <groupId>io.micrometer</groupId>
      <artifactId>micrometer-tracing-bridge-brave</artifactId>
    </dependency>

    <!-- uengine -->

    <!-- <dependency>
        <groupId>org.uengine</groupId>
        <artifactId>uengine-core</artifactId>
        <version>4.1.0-SNAPSHOT</version>
    </dependency> -->

    <!-- <dependency>
        <groupId>org.uengine</groupId>
        <artifactId>uengine-resource-manager</artifactId>
        <version>4.1.0-SNAPSHOT</version>
    </dependency> -->




    <!-- Spring Cloud Stream (Kafka) - Boot 3.2 / Cloud 2023 -->
    <dependency>
      <groupId>org.springframework.cloud</groupId>
      <artifactId>spring-cloud-stream-binder-kafka</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- JUnit 4 호환 (기존 테스트 유지용) -->
    <dependency>
      <groupId>org.junit.vintage</groupId>
      <artifactId>junit-vintage-engine</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${spring-cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!-- CVE-2025-48976: commons-fileupload DoS (openfeign 전이 의존성) -->
      <dependency>
        <groupId>commons-fileupload</groupId>
        <artifactId>commons-fileupload</artifactId>
        <version>1.6.0</version>
      </dependency>
      <!-- snappy-java: kafka-clients 전이 의존성 보안 업그레이드 -->
      <dependency>
        <groupId>org.xerial.snappy</groupId>
        <artifactId>snappy-java</artifactId>
        <version>1.1.10.8</version>
      </dependency>
      <!-- zstd-jni: kafka-clients 전이 의존성 보안 업그레이드 -->
      <dependency>
        <groupId>com.github.luben</groupId>
        <artifactId>zstd-jni</artifactId>
        <version>1.5.7-7</version>
      </dependency>
      <!-- CVE-2025-22228: spring-security-crypto BCrypt 72자 우회 (6.2.10 Enterprise전용 → 6.3.10 사용) -->
      <dependency>
        <groupId>org.springframework.security</groupId>
        <artifactId>spring-security-crypto</artifactId>
        <version>6.3.10</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <profiles>
    <!-- 보안검사시 사용: mvn -Plicense-report generate-resources -->
    <profile>
      <id>license-report</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>license-maven-plugin</artifactId>
            <version>2.0.0</version>
            <executions>
              <execution>
                <id>aggregate-download-licenses</id>
                <phase>generate-resources</phase>
                <goals>
                  <goal>aggregate-download-licenses</goal>
                </goals>
                <configuration>
                  <outputDirectory>${project.basedir}/target/licenses</outputDirectory>
                </configuration>
              </execution>
              <execution>
                <id>aggregate-add-third-party</id>
                <phase>generate-resources</phase>
                <goals>
                  <goal>add-third-party</goal>
                </goals>
                <configuration>
                  <aggregate>true</aggregate>
                  <outputDirectory>${project.basedir}/target/generated-sources/license</outputDirectory>
                  <thirdPartyFilename>THIRD-PARTY.txt</thirdPartyFilename>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
    </plugins>
  </build>

</project>
